# TP-SAT-solver

./: .gitignore  README.md  dune-project  dune_cheat_cheat.txt  graphic.py
lib/: a.ml  b.ml  dune  sat.ml  sat.mli
test/: dune  tp.ml
